Bug 178602 - taglib doesn't grok ogg-vorbis .oga files
Summary: taglib doesn't grok ogg-vorbis .oga files
Status: RESOLVED FIXED
Alias: None
Product: taglib
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
: 187574 195310 197292 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-23 21:46 UTC by Rex Dieter
Modified: 2009-10-24 14:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rex Dieter 2008-12-23 21:46:51 UTC
Version:           1.5 (using KDE 4.1.3)
OS:                Linux
Installed from:    Fedora RPMs

From my crude reading of taglib-1.5's fileref.c it seems to assume that all .oga files are ogg-flac.  I'm unsure whether or not this is a valid assumption to impose.

This causes failures for folks who have ogg-vorbis encoded files named .oga.

See also downstream bug:
https://bugzilla.redhat.com/show_bug.cgi?id=476105
Comment 1 Rex Dieter 2009-01-05 15:28:58 UTC
For posterity, here's Scott's comment from the taglib ml:

Here's the Xiph bit on it:

http://wiki.xiph.org/index.php/MIME_Types_and_File_Extensions#.oga_-_audio.2Fogg

It seems that .oga should be supported for .ogg files, but it's not a 
recommended extension for them.  In TagLib 2.0, whenever that comes 
around, I think that it'll finally make sense to move some file magic 
into TagLib itself, but right now the recommended (and documented) means 
of working with TagLib and mimetype detection is to use the file type 
resolvers to plug in the platform's file type resolution (i.e. KMimeType)
Comment 2 Rex Dieter 2009-03-21 19:20:16 UTC
*** Bug 187574 has been marked as a duplicate of this bug. ***
Comment 3 Matthew Craig 2009-04-08 00:29:49 UTC
#1 disagree

Audio files of mimetype audio/ogg use the .oga file extension, by default,
according to RFC5334.

The link you provided does not say that .oga is not recommended.  It instead says,
"Vorbis and Speex may use .oga, but it is not the prefered method of distributing these files because of backwards-compatibility issues."

This is due to devices that support Vorbis typically expect to see .ogg file extensions, however, it is valid and recommended according the RFC.
Comment 4 Médéric Boquien 2009-06-18 03:49:43 UTC
*** Bug 195310 has been marked as a duplicate of this bug. ***
Comment 5 Médéric Boquien 2009-06-18 04:15:22 UTC
SVN commit 983337 by mboquien:

.oga files were not processed. Fix this. The problem was that even if the extension was defined in defaultFileExtensions(), it was not defined in create() so the file was never processed. As a 
nice side effect, it also fixes the Amarok bug that caused .oga files not to be picked up by the collection scanner.

BUG:178602


 M  +1 -1      fileref.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=983337
Comment 6 Mark Kretschmann 2009-06-20 18:13:20 UTC
*** Bug 197292 has been marked as a duplicate of this bug. ***
Comment 7 Rex Dieter 2009-06-22 14:51:56 UTC
From my naive non-coder eyes, the "fix" makes taglib assume .oga files are ogg-vorbis containers, and breaks ogg-flac.  ??
Comment 8 Rex Dieter 2009-06-22 15:10:26 UTC
To be clear, the comment along with code fix says "it(OGA) was not defined in
create()", but that's untrue, it contained:

if(ext == "OGA")
 return new Ogg::FLAC::File(fileName, readAudioProperties, audioPropertiesStyle);
Comment 9 Lukáš Lalinský 2009-10-24 14:50:24 UTC
This is fixed in r1039708