.oga files were not processed. Fix this. The problem was that even if the extension was defined in defaultFileExtensions(), it was not defined in create() so the file was never processed. As a nice side effect, it also fixes the Amarok bug that caused .oga files not to be picked up by the collection scanner.

BUG:178602


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@983337 283d02a7-25f6-0310-bc7c-ecb5cbfe19da